# dct

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
dct/: __init__.py  cli.py
dct/api/: app.py  models.py  watcher.py
dct/api/routes/: dag.py  nodes.py
dct/core/: sink.py  transition.py
dct/engine/: dask_executor.py  executor.py  inspector.py  models.py
dct/server/: app.py  watcher.py
dct/server/routes/: dag.py  nodes.py
dct/src/: dask_executor.py  executor.py  inspector.py  instance_cache.py  log_capture.py  result.py  sink.py  source.py  transition.py  type_compat.py
dct/static/: index.html
dct/static/assets/: index-BrHIbNU1.css  index-BvPssR8w.js  index-DXl5XB2B.js  index-usFEyDBn.css
examples/: source.py  transitions.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Canvas.tsx  ConsolePanel.tsx  CustomNode.tsx  GroupNode.tsx  NodeLibrary.tsx  PropertiesPanel.tsx  ResultPanel.tsx
frontend/src/hooks/: useDag.ts  useSchema.ts
frontend/src/store/: uiStore.ts
frontend/src/utils/: dagSerializer.ts  typeCompat.ts
tests/: conftest.py  test_api.py  test_cli_run.py  test_dask_executor.py  test_executor.py  test_inspector.py  test_source.py  test_type_compat.py
